fix overflow

--- a/src/app/components/notes/notes.component.css
+++ b/src/app/components/notes/notes.component.css
@@ -6,10 +6,11 @@
 .mini-card {
   border-radius: 20px;
   width: 500px;
-  height: 200px;
+  min-height: 200px;
   background: var(--branco);
   color: var(--azul);
   padding: 3vh;
+  overflow: hidden;
 }
 
 .mini-card span {
@@ -35,6 +36,9 @@
 
 .mini-card p {
   font-size: 24px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* white-space: nowrap; */
 }
 
 
@@ -88,10 +92,10 @@
   height: 520px;
   background: var(--branco);
   color: var(--azul);
-  padding:  3vh;
+  padding: 3vh;
 }
 
-.show .note div{
+.show .note div {
   display: flex;
   align-items: center;
 }
